--- a/index.html
+++ b/index.html
@@ -19,25 +19,25 @@
             <!-- <img src="img1.jpg" alt=""> -->
         </div>
         <div class="item">
-            <img src="img2.jpg" alt="">
+            <img src="images/img2.jpg" alt="">
         </div>
         <div class="item">
-            <img src="img3.jpg" alt="">
+            <img src="images/img3.jpg" alt="">
         </div>
         <div class="item">
-            <img src="img4.jpg" alt="">
+            <img src="images/img4.jpg" alt="">
         </div>
         <div class="item">
-            <img src="img1.jpg" alt="">
+            <img src="images/img1.jpg" alt="">
         </div>
         <div class="item">
-            <img src="img2.jpg" alt="">
+            <img src="images/img2.jpg" alt="">
         </div>
         <div class="item">
-            <img src="img3.jpg" alt="">
+            <img src="images/img3.jpg" alt="">
         </div>
         <div class="item">
-            <img src="img4.jpg" alt="">
+            <img src="images/img4.jpg" alt="">
         </div>  
     </div>
       
